# spots

./: .gitignore  Makefile  README.md  index.html  jsconfig.json  package-lock.json  package.json  tsconfig.json  vite.config.js  vite.config.ts
legacy/: index.tsx
legacy/auth/: AuthProvider.tsx
migrations/: 20250825223709_create_network_table.sql
src/: App.css  App.svelte  App.tsx  app.css  main.tsx  routes.ts  routes.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/migrations/: 20250826191139_create_network_table.sql  20250903195632_create_tracks_table.sql  20250904031920_make_path_unique.sql  20250904055743_create_playlists.sql  20250910172547_make_playlist_unique.sql  20250914230328_create_initial_tables.sql  20260212182733_create_users_table.sql  20260218120240_create_users_table.sql  20260218162343_remove_auth_from_users.sql  20260226224921_add_music_tables.sql
src-tauri/migrations/20250824185144_create_initial_tables/: down.sql  up.sql
src-tauri/src/: auth.rs  database.rs  errors.rs  lib.rs  logger.rs  main.rs  migrations.rs  music.rs  net.rs  network.rs  routes.rs  server.rs  user.rs  utils.rs
src-tauri/src/api/: auth.rs  dtos.rs  mod.rs  music.rs  utils.rs
src-tauri/src/commands/: auth.rs  database.rs  mod.rs  music.rs  network.rs  users.rs
src-tauri/src/database/: albums.rs  auth.rs  client.rs  mod.rs  models.rs  network.rs  playlists.rs  tracks.rs  users.rs
src-tauri/src/handlers/: auth_handler.rs  dtos.rs  mod.rs  user_handler.rs
src-tauri/src/middleware/: auth.rs
src-tauri/src/utils/: jwt.rs  password.rs
src/api/: auth.ts  auth.tsx  dtos.ts  music.tsx  network.tsx  users.tsx  utils.ts
src/auth/: AuthContext.ts  AuthProvider.tsx  authService.ts  mockAuthServiceProvider.ts  useAuth.ts
src/authService/: authService.ts  mockAuthServiceProvider.ts
src/backendApi/: mockMusicLibraryServiceProvider.ts  mockPlaylistServiceProvider.ts  musicLibraryService.ts  playlistService.ts
src/common/: stringAvatar.ts
src/common/hooks/: useValidateAction.ts
src/common/network/: useCreateNewEndpoint.ts  useGetEndpointAddr.ts  useLoadEndpoint.ts
src/components/: Authenticator.tsx  Avatar.tsx  BackButton.tsx  BottomNavBar.tsx  Card.tsx  Column.tsx  Container.tsx  ErrorMessages.tsx  Glassy.ts  Img.tsx  Loading.tsx  LoginForm.tsx  MiniPlayer.tsx  Navbar.tsx  Playlist.tsx  ProtectedRoute.tsx  Row.tsx  ValidationErrors.tsx
src/components/Card/: Card.css  Card.tsx
src/components/NavDrawer/: NavDrawer.css  NavDrawer.tsx
src/components/auth/: Auth.tsx  AuthContext.ts  Authenticator.tsx  useAuth.ts
src/components/banner/: Banner.css  Banner.tsx
src/components/form/: styled.ts
src/components/glassy/: FadeGlassy.tsx  Glassy.ts
src/components/loading/: Loading.tsx
src/components/nav/: NavDrawer.tsx
src/components/player/: MusicPlayer.tsx
src/dbService/: dbService.ts  indexDBService.ts  mockDBServiceProvider.ts  mockIndexDBMigrations.ts
src/hooks/: useAuth.tsx  useAuthUsername.tsx  useDatabase.tsx  useNetwork.tsx  useStore.tsx  useStronghold.tsx
src/lib/api/: auth.ts  (+2 more)
src/mockApi/: User.ts  playlists.ts
src/mockUtils/: playlists.ts
src/musicLibraryService/: mockMusicLibraryServiceProvider.ts  musicLibraryService.ts  trackImporter.ts
src/pages/: DashboardPage.tsx  HomePage.tsx  LibraryPage.tsx  Loading.tsx  LoadingPage.tsx  LoginPage.tsx  MainLayout.tsx  NavMusicLayout.tsx  PlaylistPage.tsx  ProfilePage.tsx  SignupPage.tsx  pages.css
src/types/: argon2-wasm.d.ts  svelte-qrcode.d.ts
src/utils/: arrayBufferUtils.ts  common.tsx  errors.ts  logger.ts  sql.tsx  store.tsx  stronghold.tsx  tauriStore.tsx  zodSchemas.tsx
(+113 files in other folders)
